# image-captioning

./: .gitignore  README.md  pyproject.toml
src/image_captioning/: data.py  vocabulary.py
src/image_captioning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
